force-app/main/default/objects/Document__c/fields/Days_Until_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Expiry__c</fullName>
    <formula>IF(ISBLANK(Expiry_Date__c), null, Expiry_Date__c - TODAY())</formula>
    <label>Days Until Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>