force-app/main/default/objects/Document__c/fields/Expiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Status__c</fullName>
    <formula>IF( ISBLANK( Days_Until_Expiry__c ), &apos;No Expiry&apos;, IF (Days_Until_Expiry__c &gt; 90, &apos;Valid&apos;, IF (Days_Until_Expiry__c &gt; 0, &apos;Expiring Soon (≤90d)&apos;, &apos;Expired&apos;)))</formula>
    <label>Expiry Status</label>
    <type>Text</type>
</CustomField>