force-app/main/default/objects/Document__c/fields/External_File_Id__c.field-meta.xml
<CustomField>
    <fullName>External_File_Id__c</fullName>
    <label>External File ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>