force-app/main/default/objects/Document__c/fields/External_File_Path__c.field-meta.xml
<CustomField>
    <fullName>External_File_Path__c</fullName>
    <label>External File Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>