force-app/main/default/objects/Document__c/fields/External_File_Size__c.field-meta.xml
<CustomField>
    <fullName>External_File_Size__c</fullName>
    <label>External File Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>