force-app/main/default/objects/Document__c/fields/External_Share_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Share_URL__c</fullName>
    <label>External Share URL</label>
    <type>Url</type>
</CustomField>