force-app/main/default/objects/Document__c/fields/Has_File__c.field-meta.xml
<CustomField>
    <fullName>Has_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Attached</label>
    <type>Checkbox</type>
</CustomField>