force-app/main/default/objects/Document__c/fields/Is_Certified_Copy__c.field-meta.xml
<CustomField>
    <fullName>Is_Certified_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Copy</label>
    <type>Checkbox</type>
</CustomField>