force-app/main/default/objects/Document__c/fields/Is_Expiring_90d__c.field-meta.xml
<CustomField>
    <fullName>Is_Expiring_90d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expiring in 90 Days</label>
    <type>Checkbox</type>
</CustomField>