force-app/main/default/objects/Document__c/fields/Issuing_Authority_Text__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Authority_Text__c</fullName>
    <label>Issuing Authority</label>
    <length>120</length>
    <type>Text</type>
</CustomField>