force-app/main/default/objects/Document__c/fields/Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Country__c</fullName>
    <label>Issuing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Codes</valueSetName>
    </valueSet>
</CustomField>