force-app/main/default/objects/Document__c/fields/Last_Sync_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Check__c</fullName>
    <label>Last Sync Check</label>
    <type>DateTime</type>
</CustomField>