force-app/main/default/objects/Document__c/fields/Reference_Number_Masked__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_Masked__c</fullName>
    <formula>IF(ISBLANK(Reference_Number__c), &apos;&apos;, &apos;••••&apos; &amp; RIGHT(Reference_Number__c, 4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference (Masked)</label>
    <type>Text</type>
</CustomField>