force-app/main/default/objects/Document__c/fields/Storage_Provider__c.field-meta.xml
<CustomField>
    <fullName>Storage_Provider__c</fullName>
    <label>Storage Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Files</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Google Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>