force-app/main/default/objects/Document__c/fields/Translation_Attached__c.field-meta.xml
<CustomField>
    <fullName>Translation_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Translation Attached</label>
    <type>Checkbox</type>
</CustomField>